--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,12 +1,13 @@
 .container {
-    margin: 30px;
+  margin: 30px;
 }
 .button {
-    font-size: 16px;
-    padding: 5px 10px;
-    margin: 10px;
+  font-size: 16px;
+  padding: 5px 10px;
+  margin: 10px;
 }
 
 .buttonList {
-    display: flex;
+  display: flex;
+  justify-content: center;
 }
